--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-app",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,16 +17,19 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.5",
+    "nanoid": "^5.0.3",
     "next": "14.0.2",
+    "nprogress": "^0.2.0",
     "react": "^18",
-    "react-dom": "^18",
-    "nprogress": "^0.2.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "8.41.0",
