--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.6.0"
   }
 }
