--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "volta": {
-    "node": "20.9.0"
+    "node": "22.12.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@opennextjs/cloudflare": "^1.14.8",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.5",
     "nanoid": "^5.0.3",
-    "next": "14.0.2",
+    "next": "^14.2.35",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18"
@@ -43,6 +43,6 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.8",
     "typescript": "^5",
-    "wrangler": "^4.6.0"
+    "wrangler": "^4.59.1"
   }
 }
