--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,8 +10,7 @@
 	"compatibility_flags": ["nodejs_compat"],
 	"pages_build_output_dir": ".open-next/assets",
 	"assets": {
-		"directory": ".open-next/assets",
-		"binding": "ASSETS"
+		"directory": ".open-next/assets"
 	},
 	"observability": {
 		"enabled": true
