--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "npx opennextjs-cloudflare build",
-    "preview": "npm run pages:build && npx opennextjs-cloudflare preview",
-    "deploy": "npm run pages:build && npx opennextjs-cloudflare deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "preview": "npm run build && wrangler pages dev out",
+    "deploy": "npm run build && wrangler pages deploy out"
   },
   "volta": {
     "node": "22.12.0"
@@ -21,7 +19,6 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^5.14.18",
-    "@opennextjs/cloudflare": "^1.14.8",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.5",
     "nanoid": "^5.0.3",
