--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,7 +7,7 @@
 	"name": "kamite-portfolio",
 	"compatibility_date": "2024-12-30",
 	"compatibility_flags": ["nodejs_compat"],
-	"pages_build_output_dir": ".open-next/assets",
+	"pages_build_output_dir": "out",
 	"observability": {
 		"enabled": true
 	}
